[package]
name = "bestool-psql"
version = "0.1.0"
edition = "2021"
authors = ["Félix Saparelli <felix@passcod.name>", "BES Developers <contact@bes.au>"]
license = "GPL-3.0-or-later"
description = "Custom psql wrapper for BES (bestool dependency)"
repository = "https://github.com/beyondessential/bestool"

[[bin]]
name = "bestool-psql"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "psql-history"
path = "src/bin/psql-history.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4.5.47", features = ["cargo", "derive", "wrap_help"], optional = true }
edit = "0.1.5"
jiff = "0.2.15"
lloggs = { version = "1.1.0", optional = true }
miette = { version = "7.6.0", features = ["fancy"] }
portable-pty = "0.9.0"
rand = "0.9.2"
redb = "3.1.0"
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strip-ansi-escapes = "0.2.1"
syntect = { version = "5.3.0", default-features = false, features = ["parsing", "regex-fancy", "default-themes", "default-syntaxes"] }
tempfile = "3.21.0"
terminal_size = "0.4.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.18"
libc = "0.2.177"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }

[features]
default = ["cli"]
cli = ["dep:clap", "dep:lloggs"]
