[package]
name = "bestool-psql"
version = "1.0.7"
edition = "2024"
authors = ["Félix Saparelli <felix@passcod.name>", "BES Developers <contact@bes.au>"]
license = "GPL-3.0-or-later"
description = "psql-inspired client for PostgreSQL"
repository = "https://github.com/beyondessential/bestool/tree/main/crates/psql"

[[bin]]
name = "bestool-psql"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4.5.47", features = ["cargo", "derive", "wrap_help"], optional = true }
comfy-table = "7.2.1"
csv = "1.3.1"
crossterm = "0.29.0"
ctrlc = "3.4.4"
dirs = "6.0.0"
edit = "0.1.5"
hex = "0.4.3"
jiff = "0.2.15"
lloggs = { version = "1.1.0", optional = true }
miette = "7.6.0"
mobc = "0.9.0"
mobc-postgres = { version = "0.9.0", features = ["with-serde_json-1"] }
indexmap = { version = "2.12.0", features = ["serde"] }
rand = "0.8.5"
redb = "3.1.0"
reflink-copy = "0.1.20"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-native-certs = "0.8.2"
rusqlite = "0.32.1"
rust_xlsxwriter = "0.80.0"
rustyline = { version = "17.0.2", features = ["signal-hook"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
supports-unicode = "3.0.0"
syntect = { version = "5.3.0", default-features = false, features = ["parsing", "regex-fancy", "default-themes", "default-syntaxes"] }
sysinfo = "0.32.1"
tempfile = "3.21.0"
fraction = { version = "0.15", features = ["with-postgres-support"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = { version = "0.7.15", features = ["with-jiff-0_2", "with-serde_json-1"] }
tokio-postgres-rustls = "0.13.0"
tracing = "0.1.41"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
winnow = "0.7.13"

[target.'cfg(unix)'.dependencies]
libc = "0.2.177"
signal-hook = "0.3.18"

[dev-dependencies]
filetime = "0.2"
temp-env = "0.3"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:lloggs", "miette/fancy"]
