[package]
name = "bestool-psql2"
version = "0.1.0"
edition = "2021"
authors = ["Félix Saparelli <felix@passcod.name>", "BES Developers <contact@bes.au>"]
license = "GPL-3.0-or-later"
description = "Async PostgreSQL client for BES (bestool dependency)"
repository = "https://github.com/beyondessential/bestool"

[[bin]]
name = "bestool-psql2"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4.5.47", features = ["cargo", "derive", "wrap_help"], optional = true }
cli-table = "0.5.0"
lloggs = { version = "1.1.0", optional = true }
miette = "7.6.0"
rustyline = "17.0.2"
syntect = { version = "5.3.0", default-features = false, features = ["parsing", "regex-fancy", "default-themes", "default-syntaxes"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = "0.7.15"
tracing = "0.1.41"

[target.'cfg(unix)'.dependencies]
libc = "0.2.177"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:lloggs", "miette/fancy"]
