[package]
name = "bestool-psql2"
version = "0.1.0"
edition = "2021"
authors = ["Félix Saparelli <felix@passcod.name>", "BES Developers <contact@bes.au>"]
license = "GPL-3.0-or-later"
description = "Async PostgreSQL client for BES (bestool dependency)"
repository = "https://github.com/beyondessential/bestool"

[[bin]]
name = "bestool-psql2"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4.5.47", features = ["cargo", "derive", "wrap_help"], optional = true }
comfy-table = "7.2.1"
crossterm = "0.29.0"
hex = "0.4.3"
jiff = "0.2.15"
lloggs = { version = "1.1.0", optional = true }
miette = "7.6.0"
mobc = "0.9.0"
mobc-postgres = { version = "0.9.0", features = ["with-serde_json-1"] }
redb = "3.1.0"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-native-certs = "0.8.2"
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
supports-unicode = "3.0.0"
syntect = { version = "5.3.0", default-features = false, features = ["parsing", "regex-fancy", "default-themes", "default-syntaxes"] }
tempfile = "3.21.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = { version = "0.7.15", features = ["with-jiff-0_2", "with-serde_json-1"] }
tokio-postgres-rustls = "0.13.0"
tracing = "0.1.41"
winnow = "0.7.13"

[target.'cfg(unix)'.dependencies]
libc = "0.2.177"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:lloggs", "miette/fancy"]
