[package]
name = "rpi-st7789v2-driver"
version = "0.3.4"
edition = "2021"
rust-version = "1.76.0"
resolver = "2"

authors = ["Félix Saparelli <felix@passcod.name>", "BES Developers <contact@bes.au>"]
license = "GPL-3.0-or-later"
description = "Raspberry-Pi driver for the ST7789V2 TFT display controller (WaveShare 1.69\" 240x280 LCD)"
keywords = ["embedded-graphics", "waveshare", "st7789v2", "lcd", "raspberry-pi"]
categories = ["embedded", "hardware-support"]
repository = "https://github.com/beyondessential/bestool"

[dependencies]
bitvec = "1.0.1"
embedded-graphics = "0.8.1"
itertools = "0.13.0"
thiserror = "2.0.9"
tracing = { version = "0.1.41", features = ["attributes"] }
miette = { version = "7.4.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.22.1"

[features]
miette = ["dep:miette"]
