[package]
name = "bestool-tamanu"
version = "0.4.0"
edition = "2024"
authors = ["Félix Saparelli <felix@passcod.name>", "BES Developers <contact@bes.au>"]
license = "GPL-3.0-or-later"
description = "(Internal) BES tooling: Tamanu library (config, discovery, healthchecks)"
repository = "https://github.com/beyondessential/bestool/tree/main/crates/tamanu"
exclude.workspace = true

[lints]
workspace = true

[features]
default = ["doctor"]
doctor = [
	"dep:futures",
	"dep:hickory-resolver",
	"dep:owo-colors",
	"dep:reqwest",
	"dep:tokio",
]
meta-ticket = ["dep:p256"]

[dependencies]
dirs = "6.0.0"
duct = "1.1.0"
glob = "0.3.3"
itertools = { workspace = true }
jiff = { version = "0.2.24", features = ["serde"] }
json5 = "1.3.0"
leon = "3.0.1"
leon-macros = "1.0.2"
miette = { workspace = true }
node-semver = "2.2.0"
percent-encoding = "2.3.1"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sysinfo = { workspace = true }
tokio-postgres = { version = "0.7.17", features = ["with-jiff-0_2", "with-serde_json-1", "with-uuid-1"] }
tracing = { workspace = true }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.1", features = ["v4"] }

# meta-ticket-only
p256 = { version = "0.13.2", features = ["pkcs8", "pem"], optional = true }

# doctor-only
futures = { workspace = true, optional = true }
hickory-resolver = { version = "0.26.1", optional = true }
owo-colors = { version = "4.2.3", optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, features = ["process", "time", "sync", "rt", "net", "macros"], optional = true }

[dev-dependencies]
tempfile = "3.21.0"
tokio = { workspace = true, features = ["full"] }
