[package]
name = "bestool-tamanu"
version = "0.14.5"
edition = "2024"
authors = ["Félix Saparelli <felix@passcod.name>", "BES Developers <contact@bes.au>"]
license = "GPL-3.0-or-later"
description = "(Internal) BES tooling: Tamanu library (config, discovery)"
repository = "https://github.com/beyondessential/bestool/tree/main/crates/tamanu"
exclude.workspace = true

[lints]
workspace = true

[features]
device-key = ["dep:p256"]
canopy-registration = ["dep:bestool-canopy"]

[dependencies]
bestool-canopy = { version = "0.5.0", path = "../canopy", optional = true }
bestool-postgres = { version = "1.1.0", path = "../postgres" }
dirs = "6.0.0"
duct = "1.1.0"
futures = { workspace = true }
glob = "0.3.3"
itertools = { workspace = true }
jiff = { version = "0.2.28", features = ["serde"] }
json5 = "1.3.0"
leon = "3.0.1"
leon-macros = "1.0.2"
miette = { workspace = true }
node-semver = "2.2.0"
p256 = { version = "0.13.2", features = ["pkcs8", "pem"], optional = true }
percent-encoding = "2.3.1"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sysinfo = { workspace = true }
tempfile = "3.21.0"
tokio = { workspace = true, features = ["process", "time", "sync", "rt", "net", "macros"] }
tokio-postgres = { version = "0.7.17", features = ["with-jiff-0_2", "with-serde_json-1", "with-uuid-1"] }
tracing = { workspace = true }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.2", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
# geteuid(), to tell whether we're root (so we know whether reading rootful
# podman needs sudo) without parsing /proc.
rustix = { version = "1", features = ["process"] }
zbus_systemd = { version = "0.26100.0", default-features = false, features = ["systemd1", "zbus-async-tokio"] }
